dev: opt profile update and cnveration reading
